--- a/css/default.css
+++ b/css/default.css
@@ -25,6 +25,10 @@ h2 {
   font-size: 3em !important;
   margin: 0.6em 0 0.4em 0;
 }
+.goal p {
+  padding-top: 1em !important;
+  font-size: 2.75em !important;
+}
 .topic-template h1 {
   color: #999;
   font-family: "Bebas Neue";
